--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,14 @@ CodingAssignment02/.Rproj.user/CA2E5524/sources/s-2019D230/A64B3A10
 CodingAssignment02/.Rproj.user/CA2E5524/sources/s-2019D230/5D2F21E9-contents
 CodingAssignment02/.Rproj.user/CA2E5524/sources/prop/INDEX
 CodingAssignment02/.Rproj.user/CA2E5524/sources/prop/8D7050A4
+CodingAssignment03/.Rproj.user/CA2E5524/sources/prop/6DD23A75
+CodingAssignment03/.Rproj.user/CA2E5524/sources/prop/DE47E33B
+CodingAssignment03/.Rproj.user/CA2E5524/sources/prop/INDEX
+CodingAssignment03/.Rproj.user/CA2E5524/sources/s-640CDB7D/2E14D668
+CodingAssignment03/.Rproj.user/CA2E5524/sources/s-640CDB7D/2E14D668-contents
+CodingAssignment03/.Rproj.user/CA2E5524/sources/s-640CDB7D/528F1F0A-contents
+CodingAssignment03/.Rproj.user/CA2E5524/sources/s-640CDB7D/lock_file
+CodingAssignment03/.Rproj.user/shared/notebooks/F641C05D-CodingAssignment03/1/CA2E5524640CDB7D/chunks.json
+CodingAssignment03/.Rproj.user/shared/notebooks/F641C05D-CodingAssignment03/1/s/chunks.json
+CodingAssignment03/.Rproj.user/shared/notebooks/patch-chunk-names
+CodingAssignment03/.Rproj.user/shared/notebooks/paths
